# flowers

./: .gitignore  README.md  aep_analysis.py  aep_debug.py  aep_figures.py  analysis_aep.py  annual_energy.py  array.sh  benchmarks.py  benchmarks_park.py  comparison.py  comparison_optimization.py  comparison_park.py  comparison_scaling.py  constraint_debug.py  constraints.py  debugging.py  features.py  features_plots.py  figures.py  figures_aep.py  flowers_interface.py  fourier.py  generate_layouts.py  generate_wind_roses.py  gradient_debug.py  hist.hist  layout.py  model.py  model_interface.py  multistart.py  opt_debug.py  opt_figures.py  opt_multistart.py  opt_parameter.py  opt_study.py  optimization.py  optimization_interface.py  out.out  pyproject.toml  (+7 more)
examples/: compute_AEP.py
flowers/: __init__.py  flowers_model.py  tools.py  visualization.py
input/: conventional_array.sh  flowers_array.sh  gauss.yaml  jensen.yaml  parameter_array.sh  park.yaml  post.yaml  turbopark.yaml
layouts/: large0.p  large1.p  large10.p  large11.p  large12.p  large13.p  large14.p  large15.p  large16.p  large17.p  large18.p  large19.p  large2.p  large20.p  large21.p  large22.p  large23.p  large24.p  large25.p  large26.p  large27.p  large28.p  large29.p  large3.p  large30.p  large31.p  large32.p  large33.p  large34.p  large35.p  large36.p  large37.p  large38.p  large39.p  large4.p  large40.p  large41.p  large42.p  large43.p  large44.p  (+260 more)
wind_roses/: wr0.p  wr00.p  wr1.p  wr10.p  wr11.p  wr12.p  wr14.p  wr15.p  wr2.p  wr3.p  wr4.p  wr5.p  wr6.p  wr7.p  wr8.p  wr9.p
(+5 files in other folders)
